--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="home2.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
 		<li class="nav-item">
-              <a class="nav-link" href="about2.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
 		<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -41,7 +41,7 @@
               </div>
             </li>
 			 <li class="nav-item">
-                <a class="nav-link" href="contact2.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
 			
         <li class="nav-item">
