--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link" href="home2.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
 			
 
-              <a class="nav-link" href="about2.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -42,7 +42,7 @@
             </li>
             
             <li class="nav-item">
-                <a class="nav-link active" href="contact2.html">Contact Us</a>
+                <a class="nav-link active" href="contact.html">Contact Us</a>
               </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
