--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="1600x500.jpg" class="d-block w-100" alt="...">
+      <img src="https://source.unsplash.com/1600x500?/coding,laptop,custom pc" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h1>Wlecome</h1>
         <p>Technology News, Development and Trends.</p>
